<resources>
    <string name="app_name">Matteapp</string>
    <string name="front_title">Sagens Matteskole</string>
    <string name="front_subtitle">Lær å regne enkelt og morsomt</string>
    <string name="front_button_start_spill">Start spill</string>
    <string name="front_button_se_statistikk">Se statistikk</string>
    <string name="front_button_preferanser">Preferanser</string>

    <string name="preferanser_title">Preferanser</string>
    <string name="preferanser_subtitle">Tilpass din spillopplevelse</string>
    <string name="preferanser_button_back">Tilbake</string>
    <string name="preferanser_file" translatable="false">preferences</string>
    <string name="preferenser_setting_key_num_tasks" translatable="false">num_tasks</string>
    <string name="preferenser_setting_current_correct" translatable="false">current_correct</string>
    <string name="preferenser_setting_current_wrong" translatable="false">current_wrong</string>
    <string name="preferenser_setting_total_correct" translatable="false">total_correct</string>
    <string name="preferenser_setting_total_wrong" translatable="false">total_wrong</string>
    <string name="preferenser_setting_key_language" translatable="false">language</string>
    <integer name="preferanser_default_num_tasks">5</integer>
    <string name="preferanser_default_language" translatable="false">NO</string>
    <string name="preferanser_language_norsk" translatable="false">Norsk</string>
    <string name="preferanser_language_tysk" translatable="false">Deutsche</string>
    <string name="preferanser_antall_oppgaver">Antall oppgaver</string>
    <integer name="preference_number_of_tasks_1">5</integer>
    <integer name="preference_number_of_tasks_2">10</integer>
    <integer name="preference_number_of_tasks_3">25</integer>

    <string name="preferanser_sprak">Språk</string>
    <string name="statistikk_title">Statistikk</string>
    <string name="statistikk_subtitle">Se dine resultater</string>
    <string name="spill_los_oppgaven">Løs oppgaven</string>
    <string name="spill_avslutt">Avslutt</string>
    <string name="spill_angre">Angre</string>
    <string name="spill_1" translatable="false">1</string>
    <string name="spill_2" translatable="false">2</string>
    <string name="spill_3" translatable="false">3</string>
    <string name="spill_4" translatable="false">4</string>
    <string name="spill_5" translatable="false">5</string>
    <string name="spill_6" translatable="false">6</string>
    <string name="spill_7" translatable="false">7</string>
    <string name="spill_8" translatable="false">8</string>
    <string name="spill_9" translatable="false">9</string>
    <string name="spill_0" translatable="false">0</string>
    
    <string name="dialog_no_more_title">Ingen fler spørsmål!</string>
    <string name="dialog_no_more_message">Du har ingen spørsmål tilgjengelig. Restart appen for å laste nye spørsmål.</string>
    <string name="dialog_no_more_btn_avslutt">Avslutt</string>
    <string name="dialog_finished_title">Du er ferdig!</string>
    <string name="dialog_finished_message">Du svarte riktig på %d av %d \nØnsker du å starte en ny runde eller avslutte?</string>
    <string name="dialog_finished_new">Ny runde</string>
    <string name="dialog_finished_quit">Avslutt</string>
    <string name="spill_riktig_svar">Riktig svar</string>
    <string name="spill_feil_svar">Feil svar</string>
    <string name="exit_dialog_message">Er du sikker på at du virkelig vil avslutte? Statistikk vil ikke bli lagret fra denne runden om du avslutter midt i et spill.</string>
    <string name="exit_dialog_title">Avslutte?</string>
    <string name="exit_dialog_negative">Nei, fortsett spillet!</string>
    <string name="exit_dialog_possitive">Ja, avslutt nå!</string>
    <string name="spill_ditt_svar">Ditt svar</string>
    <string name="spill_stats_divider" translatable="false">/</string>
    <string name="statistikk_num_correct_answers">Antall riktige svar</string>
    <string name="statistikk_num_wrong_answers">Antall gale svar</string>
    <string name="statistikk_reset_button">Tilbakestill</string>
</resources>
