<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp"
        android:gravity="center_horizontal"
        android:background="@color/primary">

        <TextView
            android:id="@+id/front_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/front_title"
            android:textAlignment="center"
            android:textSize="@dimen/text_title_size"
            android:textColor="@color/icons"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:background="@color/primary"
        android:paddingBottom="60dp">

        <TextView
            android:id="@+id/front_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/front_subtitle"
            android:textAlignment="center"
            android:textColor="@color/icons"
            android:textSize="@dimen/text_subtitle_size"/>

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingRight="60dp"
        android:paddingLeft="60dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:drawableStart="@drawable/inline_ic_favorite_white"
            android:drawablePadding="10dp"
            android:onClick="showGame"
            android:paddingLeft="@dimen/button_paddingX"
            android:paddingRight="@dimen/button_paddingX"
            android:text="@string/front_button_start_spill"
            android:textColor="@color/icons"
            android:textSize="@dimen/text_button_size"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:drawableStart="@drawable/inline_ic_assessment_white"
            android:drawablePadding="10dp"
            android:onClick="showStatistikk"
            android:paddingLeft="@dimen/button_paddingX"
            android:paddingRight="@dimen/button_paddingX"
            android:text="@string/front_button_se_statistikk"
            android:textColor="@color/icons"
            android:textSize="@dimen/text_button_size"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:drawableStart="@drawable/inline_ic_build_white"
            android:drawablePadding="10dp"
            android:onClick="showPreferences"
            android:paddingLeft="@dimen/button_paddingX"
            android:paddingRight="@dimen/button_paddingX"
            android:text="@string/front_button_preferanser"
            android:textColor="@color/icons"
            android:textSize="@dimen/text_button_size"/>

    </LinearLayout>

</TableLayout>
