<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpillActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/light_green_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_correct_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_title_size"
            android:text="" />

        <TextView
            android:id="@+id/number_divider_text"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_title_size"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/spill_stats_divider" />

        <TextView
            android:id="@+id/number_wrong_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/text_title_size"
            android:text="" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="80dp"
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_subtitle_size"
        android:text="@string/spill_los_oppgaven" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/questionBox"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:textSize="@dimen/text_title_size"
        android:text=""/>

    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/your_answer_text"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionBox"
        android:textSize="@dimen/text_subtitle_size"
        android:text="@string/spill_ditt_svar"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/your_answer_text">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:gravity="center">

            <EditText
                android:id="@+id/answer_field"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="number"
                android:paddingEnd="30dp"
                android:textSize="@dimen/text_title_size"
                android:textAlignment="textEnd"
                android:backgroundTint="#333"
                tools:ignore="RtlSymmetry" />

            <ImageButton
                android:id="@+id/button_clear"
                android:src="@drawable/ic_backspace_black_24dp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/inline_ic_thumb_up_white"
                android:paddingEnd="3dp"
                android:text=""
                android:background="@drawable/buttons"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"
                tools:ignore="RtlSymmetry"
                android:onClick="angreClick"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/answer_feedback_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/text_title_size"
        android:text=""
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button_layout"/>

    <TableLayout
        android:id="@+id/button_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:id="@+id/buttonX"
                android:width="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spill_avslutt"
                android:background="@drawable/buttons_warning"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"
                android:onClick="avsluttButton"
                android:src="@drawable/ic_exit_to_app_black_24dp"
                android:padding="6dp"/>

            <ImageButton
                android:id="@+id/buttonY"
                android:width="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/spill_angre"
                android:background="@drawable/buttons_dark"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"
                android:onClick="checkAnswerButton"
                android:src="@drawable/ic_check_circle_black_24dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

                <Button
                    android:id="@+id/button1"
                    android:width="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spill_1"
                    android:background="@drawable/buttons"
                    android:textColor="@color/icons"
                    android:textSize="@dimen/text_button_size"
                    android:layout_margin="2dp"
                    android:onClick="addNumber"/>

                <Button
                    android:id="@+id/button2"
                    android:width="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spill_2"
                    android:background="@drawable/buttons"
                    android:textColor="@color/icons"
                    android:textSize="@dimen/text_button_size"
                    android:layout_margin="2dp"
                    android:onClick="addNumber"/>

                <Button
                    android:id="@+id/button3"
                    android:width="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spill_3"
                    android:background="@drawable/buttons"
                    android:textColor="@color/icons"
                    android:textSize="@dimen/text_button_size"
                    android:layout_margin="2dp"
                    android:onClick="addNumber"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button4"
                android:width="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spill_4"
                android:background="@drawable/buttons"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"
                android:onClick="addNumber"/>

            <Button
                android:id="@+id/button5"
                android:width="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spill_5"
                android:background="@drawable/buttons"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"
                android:onClick="addNumber" />

            <Button
                android:id="@+id/button6"
                android:width="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spill_6"
                android:background="@drawable/buttons"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"
                android:onClick="addNumber"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button7"
                android:width="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spill_7"
                android:background="@drawable/buttons"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"
                android:onClick="addNumber"/>

            <Button
                android:id="@+id/button8"
                android:width="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spill_8"
                android:background="@drawable/buttons"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"
                android:onClick="addNumber" />

            <Button
                android:id="@+id/button9"
                android:width="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spill_9"
                android:background="@drawable/buttons"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"
                android:onClick="addNumber"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/buttonA"
                android:width="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:background="@drawable/buttons_disabled"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"/>

            <Button
                android:id="@+id/button0"
                android:width="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spill_0"
                android:background="@drawable/buttons"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"
                android:onClick="addNumber" />

            <Button
                android:id="@+id/buttonB"
                android:width="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:background="@drawable/buttons_disabled"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/text_button_size"
                android:layout_margin="2dp"/>

        </TableRow>

    </TableLayout>

</RelativeLayout>
