<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_green_bg">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <!--    Imageview for om jeg ønsker bilde i fremtiden    -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/primary"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="60dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistikk_title"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_title_size"
                    android:textColor="@color/icons"
                    android:shadowColor="#000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistikk_subtitle"
                    android:textAlignment="center"
                    android:textColor="@color/icons"
                    android:textSize="@dimen/text_subtitle_size"
                    android:shadowColor="#000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"/>

            </TableRow>

        </TableLayout>

    </FrameLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="40dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistikk_num_correct_answers"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_subtitle_size"/>
            </TableRow>

            <TableRow
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/correct_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/primary_dark"
                    android:textSize="@dimen/text_subtitle_size" />

            </TableRow>

            <TableRow android:paddingTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistikk_num_wrong_answers"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_subtitle_size"/>
            </TableRow>

            <TableRow
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/wrong_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/text_subtitle_size"/>

            </TableRow>

        </TableLayout>

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingRight="60dp"
        android:paddingLeft="60dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_warning"
            android:onClick="resetStats"
            android:drawableStart="@drawable/ic_warning_black_24dp"
            android:paddingStart="@dimen/button_padding_left"
            android:paddingEnd="@dimen/button_padding_right"
            android:text="@string/statistikk_reset_button"
            android:textColor="@color/icons"
            android:textSize="@dimen/text_button_size"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:drawableStart="@drawable/inline_ic_arrow_back_white"
            android:drawablePadding="10dp"
            android:onClick="showMainMenu"
            android:paddingStart="@dimen/button_padding_left"
            android:paddingEnd="@dimen/button_padding_right"
            android:text="@string/preferanser_button_back"
            android:textColor="@color/icons"
            android:textSize="@dimen/text_button_size" />

    </LinearLayout>
</TableLayout>
